[package]
name = "gallery"
version = "0.1.2"
edition = "2021"
description = "A static site generator for photo galleries"
keywords = ["static-site-generator", "photos", "gallery"]
categories = ["command-line-utilities", "template-engine"]
license = "MIT"
repository = "https://github.com/Christoph-D/gallery"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
handlebars = "6.1.0"
pulldown-cmark = { version = "0.12.1", default-features = false, features = ["html"] }
rayon = "1.10.0"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
slug = "0.1.6"
time = { version = "0.3.36", features = ["macros", "parsing"] }

[dev-dependencies]
tempfile = "3.13.0"
